Changed profile image and fixed overflow-y to be hidden in .wrapper

--- a/css/custom.css
+++ b/css/custom.css
@@ -281,14 +281,14 @@ body {
 .wrapper {
     background-color: #777;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden;
     width: 100%;
     margin-left: 100px;
 }
 
 .wrapper_deck {
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden;
     width: 100vw;
     height: 100vh;
     margin-left: 100px;
@@ -300,7 +300,7 @@ body {
 .wrapper_dev {
     background-color: #777;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden;
     width: 100%;
     margin-left: 100px;
 }
@@ -308,7 +308,7 @@ body {
 .wrapper_design {
     background-color: #777;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden;
     width: 100%;
     margin-left: 100px;
 }
@@ -316,7 +316,7 @@ body {
 .wrapper_ill {
     background-color: #777;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden;
     width: 100%;
     margin-left: 100px;
 }
